--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "hardhat": "^2.14.0"
   },
   "dependencies": {
-    "create-react-app": "^5.0.1"
+    "create-react-app": "^5.0.1",
+    "dotenv": "^16.0.3"
   }
 }
